Fixes #38 for filler col. Added overflow: hidden to give layout to col.

--- a/scss/core/_base/_grid.scss
+++ b/scss/core/_base/_grid.scss
@@ -32,7 +32,7 @@
 .cui-filler-col-sm {
     float: none;
     width: auto;
-    @include clearfix;
+    overflow: hidden;
 }
 
 .cui-row,
